补充自动化测试

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "types": [
+      "webpack-env","jest"
+    ]
   }
 }
