--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./webpack.config.js",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "unit": "jest"
   },
   "keywords": [],
   "author": "Toshi",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.17.7",
+    "@babel/core": "^7.17.7-bridge.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.1",
     "autoprefixer": "^10.4.4",
+    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "postcss-loader": "^6.2.1",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.2",
     "url-loader": "^4.1.1",
+    "vue-jest": "^3.0.7",
     "vue-loader": "^15.0.0",
     "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.14",
@@ -33,6 +39,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@vue/test-utils": "^1.3.0",
     "vue": "^2.6.14",
     "vue-router": "^3.2.0"
   },
